--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
     "lint": "eslint",
     "lint-fix": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +21,10 @@
     "prettier": "^3.4.2"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "uuid": "^11.0.4"
   }
 }
